--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   "devDependencies": {
     "@chromatic-com/storybook": "^1.5.0",
     "@storybook/addon-a11y": "^8.1.6",
+    "@storybook/addon-designs": "^8.0.2",
     "@storybook/addon-essentials": "^8.1.6",
     "@storybook/addon-interactions": "^8.1.6",
     "@storybook/addon-links": "^8.1.6",
