--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.5.0",
+    "@playwright/test": "^1.44.1",
     "@storybook/addon-a11y": "^8.1.6",
     "@storybook/addon-designs": "^8.0.2",
     "@storybook/addon-essentials": "^8.1.6",
@@ -58,7 +59,6 @@
     "@storybook/react": "^8.1.6",
     "@storybook/react-webpack5": "^8.1.6",
     "@storybook/test": "^8.1.6",
-    "@storybook/test-runner": "^0.18.2",
     "eslint-plugin-storybook": "^0.8.0",
     "jest": "^29.7.0",
     "prop-types": "^15.8.1",
