--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "test-storybook": "test-storybook",
     "eject": "react-scripts eject",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "test-storybook:ci": "test-storybook --maxWorkers=2"
   },
   "eslintConfig": {
     "extends": [
@@ -46,24 +47,39 @@
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.5.0",
-    "@playwright/test": "^1.44.1",
     "@storybook/addon-a11y": "^8.1.6",
     "@storybook/addon-designs": "^8.0.2",
     "@storybook/addon-essentials": "^8.1.6",
     "@storybook/addon-interactions": "^8.1.6",
     "@storybook/addon-links": "^8.1.6",
-    "@storybook/addon-mdx-gfm": "^8.1.6",
     "@storybook/addon-onboarding": "^8.1.6",
     "@storybook/blocks": "^8.1.6",
     "@storybook/preset-create-react-app": "^8.1.6",
     "@storybook/react": "^8.1.6",
     "@storybook/react-webpack5": "^8.1.6",
     "@storybook/test": "^8.1.6",
+    "@storybook/test-runner": "^0.18.2",
     "eslint-plugin-storybook": "^0.8.0",
     "jest": "^29.7.0",
+    "loki": "^0.35.0",
     "prop-types": "^15.8.1",
     "react-test-renderer": "^18.3.1",
     "storybook": "^8.1.6",
     "webpack": "^5.91.0"
+  },
+  "loki": {
+    "configurations": {
+      "chrome.laptop": {
+        "target": "chrome.docker",
+        "width": 1366,
+        "height": 768,
+        "deviceScaleFactor": 1,
+        "mobile": false
+      },
+      "chrome.iphone7": {
+        "target": "chrome.docker",
+        "preset": "iPhone 7"
+      }
+    }
   }
 }
